turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:7: error: not found: value red
  setCouleur(red)
             ^DiskFour:13: error: not found: value yellow
  setCouleur(yellow)
             ^DiskFour:19: error: not found: value pink
  setCouleur(pink)
             ^DiskFour:25: error: not found: value red
  setCouleur(red)
             ^