turtleart.diskfour.DiskFour.scala.code
override def run() {
  for (i <- 0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  setCouleur(red)
  for (i <- 0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  setCouleur(yellow)
  for (i <- 0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  setCouleur(pink)
  for (i <- 0 to 89){
    avance(100)
    recule(100)
    droite(1)
  }
  setCouleur(red)
}